--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -1532,6 +1532,8 @@ ifconfig    , ping      ,  traceroute     ,    netstat
 
 关注系统级别的管理： 进程管理，存储管理，设备管理，作业管理。
 
+熟悉linux系统。  典型   /proc   【系统编程】，    GUI编程【GUI事件模式，面向对象，设计模式（观察者，动态代理），优化ui（绘图，Qss分离化设计）】
+
 ### 进程管理：
 
 程序的执行过程，使用计算机资源的单位，分配资源时以进程为依据。每个进程都认为自己独占CPU资源。记录当前运行的状态信息到PCB。
@@ -2269,3 +2271,256 @@ car要求不能移出屏幕之外。 鼠标点击   WASD  每次移动5个像素
 3	利用资源图片【引入资源：整体打包发布，优于使用绝对路径引入资源    d:\a.jpg】
 
 4	使用Qss进行修饰和代码的隔离
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 应用性能测试监控
+
+服务性能
+
+具备服务性能的发现能力，评测能力，监控能力
+
+利用   Jmeter  实现服务的监控
+
+JMeter     开源的， 基于java的
+
+![image-20231009091054303](image-20231009091054303.png)
+
+java 的编译JDK  javac   ,   java的解释器JRE   java
+
+
+
+具体实现：
+
+1	推荐安装JDK8/11（包含了JRE），  假定安装在   C:\myfloder\develop-tools\jdk11\bin
+
+2	推荐安装Jmeter  5.x版本
+
+3	配置环境变量 
+
+![image-20231009092249955](image-20231009092249955.png)
+
+4	打开软件
+
+进入jmeter安装目录下的    bin    ，    xxx.cmd    windows下执行命令     xxxx.sh   linux下执行命令
+
+![image-20231009092959324](image-20231009092959324.png)
+
+5	使用JMetter
+
+使用多个线程模拟多个用户并发访问
+
+前置处理器：协议转换，用户认证，cookie设置
+
+后置处理器：提取数据， 数据伪装或封装
+
+取样器： 核心组件， 代表服务访问（网络访问），可以通过插件扩充
+
+监听器：统计日志并且图形化展示
+
+断言： assert   和期望一致的判断
+
+逻辑控制器：编程逻辑流程执行
+
+![image-20231009102503587](image-20231009102503587.png)
+
+
+
+
+
+
+
+课堂练习：   http://106.74.25.198/     请求发现访问瓶颈，利用  DOS攻击防止其他用户访问。
+
+
+
+# 最终大作业
+
+![image-20231010085923212](image-20231010085923212.png)
+
+
+
+要求：   word格式提交，步骤、截图、结论（硬件部署图，工作照片），提交方式 放在 小组微信群，截止   10月31日  24：00    
+
+
+
+
+
+设计规划：
+
+线路规划【双绞线】
+
+线之间的缠绕  消除  相邻线对之间的电平干扰【最主要的是     1，2，3，6 引脚】
+
+通常国标推荐两种 标准      T568B，T568A
+
+双绞线的连接形式：
+
+1	直通线：   双端线序完全相同，用在  不同层设备连接【路由--交换，交换--pc】
+
+2	交叉线：   双端线序中  ，另一端    1和3对调，   2和6对调   ，用在同层设备连接【路由-路由，交换-交换，pc-pc，  路由-pc】   
+
+3	全反线：   双端线序完全相反，   用于设备的初始化调试，    俗称   Console线， 原始   com口----RJ45口
+
+
+
+![image-20231011090507469](image-20231011090507469.png)
+
+
+
+
+
+
+
+## 通过Console线初始化设备
+
+1	连接Console【计算机USB口--------设备的Console口】
+
+2	查看本机串口设备
+
+![image-20231011090821434](image-20231011090821434.png)
+
+
+
+3	使用超级终端等远程工具，连接设备，推荐  windows的超级终端   ，本例使用   SecureCRT 9.4  
+
+![image-20231011091315843](image-20231011091315843.png)
+
+4	打开设备电源
+
+```shell
+
+Base ethernet MAC Address: 00:22:0c:e5:f7:00
+Xmodem file system is available.
+The password-recovery mechanism is enabled.
+Initializing Flash...
+flashfs[0]: 457 files, 6 directories
+flashfs[0]: 0 orphaned files, 0 orphaned directories
+flashfs[0]: Total bytes: 32514048
+flashfs[0]: Bytes used: 9056768
+flashfs[0]: Bytes available: 23457280
+flashfs[0]: flashfs fsck took 13 seconds.
+...done Initializing Flash.
+Boot Sector Filesystem (bs) installed, fsid: 3
+done.
+Loading "flash:/c3560-ipbase-mz.122-35.SE5/c3560-ipbase-mz.122-35.SE5.bin"...@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+File "flash:/c3560-ipbase-mz.122-35.SE5/c3560-ipbase-mz.122-35.SE5.bin" uncompressed and installed, entry point: 0x3000
+executing...
+
+              Restricted Rights Legend
+
+Use, duplication, or disclosure by the Government is
+subject to restrictions as set forth in subparagraph
+(c) of the Commercial Computer Software - Restricted
+Rights clause at FAR sec. 52.227-19 and subparagraph
+(c) (1) (ii) of the Rights in Technical Data and Computer
+Software clause at DFARS sec. 252.227-7013.
+
+           cisco Systems, Inc.
+           170 West Tasman Drive
+           San Jose, California 95134-1706
+
+
+
+Cisco IOS Software, C3560 Software (C3560-IPBASE-M), Version 12.2(35)SE5, RELEASE SOFTWARE (fc1)
+Copyright (c) 1986-2007 by Cisco Systems, Inc.
+Compiled Thu 19-Jul-07 18:15 by nachen
+Image text-base: 0x00003000, data-base: 0x01100000
+
+Initializing flashfs...
+
+flashfs[1]: 457 files, 6 directories
+flashfs[1]: 0 orphaned files, 0 orphaned directories
+flashfs[1]: Total bytes: 32514048
+flashfs[1]: Bytes used: 9056768
+flashfs[1]: Bytes available: 23457280
+flashfs[1]: flashfs fsck took 1 seconds.
+flashfs[1]: Initialization complete....done Initializing flashfs.
+
+POST: CPU MIC register Tests : Begin
+POST: CPU MIC register Tests : End, Status Passed
+
+POST: PortASIC Memory Tests : Begin
+POST: PortASIC Memory Tests : End, Status Passed
+
+POST: CPU MIC interface Loopback Tests : Begin
+POST: CPU MIC interface Loopback Tests : End, Status Passed
+
+POST: PortASIC RingLoopback Tests : Begin
+POST: PortASIC RingLoopback Tests : End, Status Passed
+
+POST: PortASIC CAM Subsystem Tests : Begin
+POST: PortASIC CAM Subsystem Tests : End, Status Passed
+
+POST: PortASIC Port Loopback Tests : Begin
+POST: PortASIC Port Loopback Tests : End, Status Passed
+
+Waiting for Port download...Complete
+
+cisco WS-C3560-48TS (PowerPC405) processor (revision E0) with 122880K/8184K bytes of memory.
+Processor board ID FDO1313X221
+Last reset from power-on
+1 Virtual Ethernet interface
+48 FastEthernet interfaces
+4 Gigabit Ethernet interfaces
+The password-recovery mechanism is enabled.
+
+512K bytes of flash-simulated non-volatile configuration memory.
+Base ethernet MAC Address       : 00:22:0C:E5:F7:00
+Motherboard assembly number     : 73-9898-06
+Power supply part number        : 341-0097-02
+Motherboard serial number       : FDO12240JF1
+Power supply serial number      : DCA122180ZC
+Model revision number           : E0
+Motherboard revision number     : B0
+Model number                    : WS-C3560-48TS-S
+System serial number            : FDO1313X221
+SFP Module assembly part number : 73-7757-03
+SFP Module revision Number      : A0
+SFP Module serial number        : FDO12230E6W
+Top Assembly Part Number        : 800-26162-02
+Top Assembly Revision Number    : E0
+Version ID                      : V02
+CLEI Code Number                : 448082
+Hardware Board Revision Number  : 0x01
+
+
+Switch   Ports  Model              SW Version              SW Image            
+------   -----  -----              ----------              ----------          
+*    1   52     WS-C3560-48TS      12.2(35)SE5             C3560-IPBASE-M      
+
+
+
+
+Press RETURN to get started!
+
+
+00:00:27: %LINEPROTO-5-UPDOWN: Line protocol on Interface Vlan1, changed state to down
+00:00:27: %SPANTREE-5-EXTENDED_SYSID: Extended SysId enabled for type vlan
+00:00:29: %SYS-5-CONFIG_I: Configured from memory by console
+00:00:30: %SYS-5-RESTART: System restarted --
+Cisco IOS Software, C3560 Software (C3560-IPBASE-M), Version 12.2(35)SE5, RELEASE SOFTWARE (fc1)
+Copyright (c) 1986-2007 by Cisco Systems, Inc.
+Compiled Thu 19-Jul-07 18:15 by nachen
+```
+
+5	配置管理ip，方便远程管理【二层交换机配置IP本质上是给VLAN配置ip，建议配置给VLAN1   】
+
+
+
+
+
+
+
+例外：部分设备存在密码，初始化撤销密码
+
